/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package bookkeeper.tests.proto.rpc;

option java_multiple_files = true;
option java_package = "org.bookkeeper.tests.proto.rpc";

message PingRequest {
    int64 sequence = 1;
}

message PongResponse {
    int64 last_sequence = 1;
    int32 num_ping_received = 2;
    // the slot id in this stream of pong responses.
    int32 slot_id = 3;
}

service PingPongService {

    rpc PingPong(PingRequest) returns (PongResponse) {}

    rpc LotsOfPings(stream PingRequest) returns (PongResponse) {}

    rpc LotsOfPongs(PingRequest) returns (stream PongResponse) {}

    rpc BidiPingPong(stream PingRequest) returns (stream PongResponse) {}

}


